@@ -155,6 +155,7 @@ static const opt_struct OPTIONS[] = {
 	{'y', 1, "fpm-config"},
 	{'t', 0, "test"},
 	{'p', 1, "prefix"},
+	{'g', 1, "pid"},
 	{'-', 0, NULL} /* end of args */
 };
 
@@ -961,7 +962,7 @@ static void php_cgi_usage(char *argv0)
 		prog = "php";
 	}
 
-	php_printf(	"Usage: %s [-n] [-e] [-h] [-i] [-m] [-v] [-t] [-p <prefix> ] [-c <file>] [-d foo[=bar]] [-y <file>]\n"
+	php_printf(	"Usage: %s [-n] [-e] [-h] [-i] [-m] [-v] [-t] [-p <prefix>] [-g <pid>] [-c <file>] [-d foo[=bar]] [-y <file>]\n"
 				"  -c <path>|<file> Look for php.ini file in this directory\n"
 				"  -n               No php.ini file will be used\n"
 				"  -d foo[=bar]     Define INI entry foo with value 'bar'\n"
@@ -972,6 +973,8 @@ static void php_cgi_usage(char *argv0)
 				"  -v               Version number\n"
 				"  -p, --prefix <dir>\n"
 				"                   Specify alternative prefix path to FastCGI process manager (default: %s).\n"
+				"  -g, --pid <file>\n"
+				"                   Specify the PID file location.\n"
 				"  -y, --fpm-config <file>\n"
 				"                   Specify alternative path to FastCGI process manager config file.\n"
 				"  -t, --test       Test FPM configuration and exit\n",
@@ -1587,6 +1590,7 @@ int main(int argc, char *argv[])
 	fcgi_request request;
 	char *fpm_config = NULL;
 	char *fpm_prefix = NULL;
+	char *fpm_pid = NULL;
 	int test_conf = 0;
 
 	fcgi_init();
@@ -1668,6 +1672,10 @@ int main(int argc, char *argv[])
 
 			case 'p':
 				fpm_prefix = php_optarg;
+				break;
+
+			case 'g':
+				fpm_pid = php_optarg;
 				break;
 
 			case 'e': /* enable extended info output */
@@ -1815,7 +1823,7 @@ consult the installation file that came with this distribution, or visit \n\
 		}
 	}
 
-	if (0 > fpm_init(argc, argv, fpm_config ? fpm_config : CGIG(fpm_config), fpm_prefix, test_conf)) {
+	if (0 > fpm_init(argc, argv, fpm_config ? fpm_config : CGIG(fpm_config), fpm_prefix, fpm_pid, test_conf)) {
 		return FAILURE;
 	}
 
