@@ -25,6 +25,7 @@ PHP                                                                        NEWS
   . Fixed missing Expires and Cache-Control headers for ping and status pages.
     (fat)
   . Implemented FR #54499 (FPM ping and status_path should handle HEAD request). (fat)
+  . Implemented FR #54172 (Overriding the pid file location of php-fpm). (fat)
 
 - SPL extension:
   . Fixed bug #54971 (Wrong result when using iterator_to_array with use_keys
